Ok, I've started a changelog!
v 2.9 - * Added Object Sorting section to complement ListChildren routine
v 2.8 - * Made characters default to having exclude_from_all true
        * Added a ClearArray call to FindStatusHeight to prevent room from being printed twice
          in statustype-less games
        * Updated rdyshell to call flags.hug, switchgram.g, and inclusions.h
	* new "New Style Pronouns" and "Routine Grammar Helper" sections added
v 2.7 - * Added ROODYBANNER and ROODYVERSION constants to make it easier for games to proclaim
	the Roodylib version in DoVersion and/or the game title segment, if they choose.
	* Added default "XYZZY" response so Hugo authors aren't bugged to provide responses.
	* Use the NO_XYZZY flag if you'd like to turn it off.
	* Added USE_EXTENSION_CREDITING section for listing included extensions in CREDITS responses
	* Added a status_top property to the printstatuslib system so status windows can coexist
	with graphical windows in multimedia games (status_top should equal the top row number of
	the status window)
	* Added asterisks to section headings to make it easier for my text editor (EditPlus) to jump
	to sections (so now I can set my Function List search to look for lines that begin with "!*")
	* Updated PropertyList, ListObjects, and PrintArrayList (the last is in extraroutines.hug)
	to add optional "conjunction" argument, so object listing can be a means of providing
        choices. Created ListChildren routine which sets the list_count global so ListObjects works
	correctly in such cases.
v 2.6 - Modified DoUndo so it resets verbroutine to &DoUndo after successful UNDO
	( a successful UNDO changes the verbroutine to the routine that was successfully
	UNDOne, but that leaves the door open to after and react_after properties being run
	again)
	changed "test" local variable in RedrawScreen to something less generic
	updated CenterTitle to work with strings bigger than screen width
	tweaked some door code,